--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: catcher
 description: Plugin for error catching which provides multiple handlers for dealing with errors when they are not caught by the developer.
-version: 1.0.0-dev1
+version: 0.8.0
 #author: Jakub Homlala <jhomlala@gmail.com>
 homepage: https://github.com/jhomlala/catcher
 repository: https://github.com/jhomlala/catcher
@@ -13,24 +13,43 @@ topics:
   - tool
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=3.3.0"
+  sdk: '>=2.19.6 <4.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  fluttertoast: ^8.2.6
+  fluttertoast: ^8.2.5
   device_info_plus: ^10.1.0
   device_info_plus_platform_interface: ^7.0.0
-  package_info_plus: ^8.0.0
+  package_info_plus: ^7.0.0
   mailer: ^6.1.0
   dio: ^5.4.3+1
   flutter_mailer: ^2.1.2
   logging: ^1.2.0
-  sentry: ^8.2.0
+  sentry: ^7.19.0
   universal_io: ^2.2.2
+  very_good_analysis: ^5.1.0
 
 dev_dependencies:
-  very_good_analysis: ^5.1.0
+  lint: ^2.3.0
+
+flutter:
+  plugin:
+    platforms:
+      android:
+        package: com.jhomlala.catcher
+        pluginClass: CatcherPlugin
+      ios:
+        pluginClass: CatcherPlugin
+      web:
+        pluginClass: CatcherWebPlugin
+        fileName: catcher_web_plugin.dart
+      macos:
+        pluginClass: CatcherPlugin
+      windows:
+        pluginClass: CatcherPlugin
+      linux:
+        pluginClass: CatcherPlugin
